--- a/DockerFile
+++ b/DockerFile
@@ -1,14 +1,17 @@
 # From base image (ubuntu)
-FROM ubuntu:16.04
+# FROM ubuntu:16.04
+
+# From python image
+FROM python:3.7.2-alpine3.9
 
 # Label for this image
 LABEL maintainer="Chayut Ruksomya <chayut.191@gmail.com>"
 
 # Run update Ubuntu OS command
-RUN apt-get update -y
+# RUN apt-get update -y
 
-# Install python
-RUN apt-get install -y python-pip python-dev build-essential
+# # Install python
+# RUN apt-get install -y python-pip python-dev build-essential
 
 # Copy all file in this directory into "app" folder inside container
 COPY . /app
@@ -17,7 +20,7 @@ COPY . /app
 WORKDIR /app
 
 # Run pip command to install dependencies
-RUN pip install -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Set entrypoint to use "python" command instead of bash in Ubuntu
 ENTRYPOINT ["python"]
